# Backtesting-Engine

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.simple  build_and_run.bat  docker-compose.yml
data/: spy_minute.csv
engine/: CMakeLists.txt
engine/include/: BacktestingEngine.h  Bar.h  Log.h  MarketData.h
engine/src/: BacktestingEngine.cpp  Log.cpp  MarketData.cpp  main.cpp
scripts/: GetData.py  download_data.py
